# FastAlloc

./: .gitignore  CMakeLists.txt  FastAlloc_V3_Analysis_Report.txt  README.md
.github/workflows/: ci.yml
benchmarks/: bench_extended.cpp  bench_memory.cpp
docs/: api_reference.md  performance_report.md  qa_report.md  technical_design.md
include/: fast_alloc.h
src/: fast_alloc.cpp  fast_alloc_config.h  global_heap.cpp  global_heap.h  os_memory.cpp  slab.cpp  slab.h  tls_cache.cpp  tls_cache.h
